--- a/app/src/main/res/layout/fragment_book_detail.xml
+++ b/app/src/main/res/layout/fragment_book_detail.xml
@@ -60,5 +60,16 @@
             android:id="@+id/reviewRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/noReviewsText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No Reviews yet"
+            android:textAlignment="center"
+            android:visibility="gone"
+            android:padding="16dp"
+            android:textColor="@color/purple_200"
+            android:textSize="16sp"
+            />
     </LinearLayout>
 </ScrollView>
